Add more keys to several features

--- a/features/geolocation.yml
+++ b/features/geolocation.yml
@@ -31,4 +31,5 @@ compat_features:
   - api.GeolocationPositionError.secure_context_required
   - api.Navigator.geolocation
   - api.Navigator.geolocation.secure_context_required
+  - html.elements.iframe.allow.geolocation
   - http.headers.Permissions-Policy.geolocation
