--- a/features/payment-request.yml
+++ b/features/payment-request.yml
@@ -5,6 +5,10 @@ group: payments
 status:
   compute_from: api.PaymentRequest
 compat_features:
+  - api.PaymentMethodChangeEvent
+  - api.PaymentMethodChangeEvent.PaymentMethodChangeEvent
+  - api.PaymentMethodChangeEvent.methodDetails
+  - api.PaymentMethodChangeEvent.methodName
   - api.PaymentRequest
   - api.PaymentRequest.PaymentRequest
   - api.PaymentRequest.PaymentRequest.secure_payment_confirmation_method
@@ -14,29 +18,27 @@ compat_features:
   - api.PaymentRequest.merchantvalidation_event
   - api.PaymentRequest.paymentmethodchange_event
   - api.PaymentRequest.shippingAddress
-  - api.PaymentRequest.shippingaddresschange_event
   - api.PaymentRequest.shippingOption
-  - api.PaymentRequest.shippingoptionchange_event
   - api.PaymentRequest.shippingType
+  - api.PaymentRequest.shippingaddresschange_event
+  - api.PaymentRequest.shippingoptionchange_event
   - api.PaymentRequest.show
-  - api.PaymentMethodChangeEvent
-  - api.PaymentMethodChangeEvent.PaymentMethodChangeEvent
-  - api.PaymentMethodChangeEvent.methodDetails
-  - api.PaymentMethodChangeEvent.methodName
   - api.PaymentRequestUpdateEvent
   - api.PaymentRequestUpdateEvent.PaymentRequestUpdateEvent
+  - api.PaymentRequestUpdateEvent.secure_context_required
   - api.PaymentRequestUpdateEvent.updateWith
   - api.PaymentResponse
   - api.PaymentResponse.complete
   - api.PaymentResponse.details
   - api.PaymentResponse.methodName
-  - api.PaymentResponse.payerdetailchange_event
   - api.PaymentResponse.payerEmail
   - api.PaymentResponse.payerName
   - api.PaymentResponse.payerPhone
+  - api.PaymentResponse.payerdetailchange_event
   - api.PaymentResponse.requestId
   - api.PaymentResponse.retry
   - api.PaymentResponse.shippingAddress
   - api.PaymentResponse.shippingOption
   - api.PaymentResponse.toJSON
+  - html.elements.iframe.allow.payment
   - http.headers.Permissions-Policy.payment
