--- a/features/picture-in-picture.yml
+++ b/features/picture-in-picture.yml
@@ -22,4 +22,5 @@ compat_features:
   - api.PictureInPictureEvent.PictureInPictureEvent
   - api.PictureInPictureEvent.pictureInPictureWindow
   - css.selectors.picture-in-picture
+  - html.elements.iframe.allow.picture-in-picture
   - http.headers.Permissions-Policy.picture-in-picture
