--- a/features/picture-in-picture.yml.dist
+++ b/features/picture-in-picture.yml.dist
@@ -54,5 +54,10 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "71"
+  - html.elements.iframe.allow.picture-in-picture
+
+  # baseline: false
+  # support:
   #   chrome: "88"
   - http.headers.Permissions-Policy.picture-in-picture
