--- a/features/storage-access.yml
+++ b/features/storage-access.yml
@@ -10,4 +10,5 @@ compat_features:
   - api.Document.requestStorageAccessFor
   - api.Permissions.permission_storage-access
   - api.Permissions.permission_top-level-storage-access
+  - html.elements.iframe.allow.storage-access
   - http.headers.Permissions-Policy.storage-access
