--- a/features/web-midi.yml
+++ b/features/web-midi.yml
@@ -54,3 +54,4 @@ compat_features:
   - api.Navigator.requestMIDIAccess.secure_context_required
   - api.Permissions.permission_midi
   - http.headers.Permissions-Policy.midi
+  - html.elements.iframe.allow.midi
