--- a/features/web-otp.yml
+++ b/features/web-otp.yml
@@ -8,4 +8,5 @@ compat_features:
   - api.CredentialsContainer.get.otp_option
   - api.OTPCredential
   - api.OTPCredential.code
+  - html.elements.iframe.allow.otp-credentials
   - http.headers.Permissions-Policy.otp-credentials
