--- a/features/webhid.yml
+++ b/features/webhid.yml
@@ -37,3 +37,4 @@ compat_features:
   - api.Navigator.hid
   - api.WorkerNavigator.hid
   - http.headers.Permissions-Policy.hid
+  - html.elements.iframe.allow.hid
