--- a/features/webhid.yml.dist
+++ b/features/webhid.yml.dist
@@ -12,6 +12,7 @@ compat_features:
   #   chrome: "89"
   #   chrome_android: "89"
   #   edge: "89"
+  - html.elements.iframe.allow.hid
   - http.headers.Permissions-Policy.hid
 
   # ⬇️ Same status as overall feature ⬇️
