--- a/features/geolocation.yml.dist
+++ b/features/geolocation.yml.dist
@@ -102,6 +102,15 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "64"
+  #   chrome_android: "64"
+  #   edge: "79"
+  #   firefox: "74"
+  #   firefox_android: "79"
+  - html.elements.iframe.allow.geolocation
+
+  # baseline: false
+  # support:
   #   chrome: "88"
   #   chrome_android: "88"
   #   edge: "88"
