--- a/features/web-otp.yml.dist
+++ b/features/web-otp.yml.dist
@@ -17,6 +17,7 @@ compat_features:
   - api.CredentialsContainer.get.otp_option
   - api.OTPCredential
   - api.OTPCredential.code
+  - html.elements.iframe.allow.otp-credentials
 
   # baseline: false
   # support:
