--- a/features/webauthn.yml.dist
+++ b/features/webauthn.yml.dist
@@ -96,6 +96,15 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "84"
+  #   chrome_android: "84"
+  #   edge: "84"
+  #   firefox: "118"
+  #   firefox_android: "118"
+  - html.elements.iframe.allow.publickey-credentials-get
+
+  # baseline: false
+  # support:
   #   chrome: "89"
   #   chrome_android: "108"
   #   edge: "89"
@@ -181,3 +190,9 @@ compat_features:
   #   safari: "17.4"
   #   safari_ios: "17.4"
   - api.PublicKeyCredential.getClientCapabilities_static
+
+  # baseline: false
+  # support:
+  #   firefox: "123"
+  #   firefox_android: "123"
+  - html.elements.iframe.allow.publickey-credentials-create
