--- a/features/web-share.yml.dist
+++ b/features/web-share.yml.dist
@@ -4,9 +4,13 @@
 status:
   baseline: false
   support:
-    chrome_android: "88"
+    chrome_android: "61"
     edge: "93"
+    firefox_android: "79"
+    safari: "12.1"
+    safari_ios: "12.2"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome_android: "61"
