Add virtual keyboard

--- a/features/virtual-keyboard.yml
+++ b/features/virtual-keyboard.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: VirtualKeyboard API
-description: TODO
+name: Virtual keyboard
+description: The `navigator.virtualKeyboard` property and the `VirtualKeyboard` interface handle on-screen virtual keyboards, for example to programmatically hide or show a virtual keyboard.
 spec: https://w3c.github.io/virtual-keyboard/
 compat_features:
   - api.HTMLElement.virtualKeyboardPolicy
