--- a/features/serial.yml
+++ b/features/serial.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-28
-name: Web Serial API
-description: TODO
+name: Web Serial
+description: The `navigator.serial` property and the `Serial` and `SerialPort` interfaces communicate with devices over serial ports.
 spec: https://wicg.github.io/serial/
+status:
+  compute_from: api.Navigator.serial
 compat_features:
   - api.Navigator.serial
   - api.Serial
