--- a/features/serial.yml.dist
+++ b/features/serial.yml.dist
@@ -4,7 +4,8 @@
 status:
   baseline: false
   support:
-    chrome: "130"
+    chrome: "89"
+    edge: "89"
 compat_features:
   # baseline: false
   # support:
@@ -14,6 +15,7 @@ compat_features:
   - html.elements.iframe.allow.serial
   - http.headers.Permissions-Policy.serial
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "89"
@@ -40,7 +42,6 @@ compat_features:
   #   edge: "103"
   - api.SerialPort.forget
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "130"
