--- a/features/shared-storage.yml.dist
+++ b/features/shared-storage.yml.dist
@@ -4,9 +4,9 @@
 status:
   baseline: false
   support:
-    chrome: "125"
-    chrome_android: "125"
-    edge: "125"
+    chrome: "126"
+    chrome_android: "126"
+    edge: "126"
 compat_features:
   # baseline: false
   # support:
@@ -48,7 +48,6 @@ compat_features:
   - api.HTMLIFrameElement.sharedStorageWritable
   - api.HTMLImageElement.sharedStorageWritable
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "125"
@@ -56,3 +55,15 @@ compat_features:
   #   edge: "125"
   - api.SharedStorageWorklet.run
   - api.SharedStorageWorklet.selectURL
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "126"
+  #   chrome_android: "126"
+  #   edge: "126"
+  - api.SharedStorage.createWorklet
+  - api.SharedStorage.get
+  - api.SharedStorage.run
+  - api.SharedStorage.selectURL
+  - api.SharedStorage.worklet
