--- a/features/draft/spec/html.yml
+++ b/features/draft/spec/html.yml
@@ -105,7 +105,7 @@ compat_features:
   - api.HTMLBaseElement.href.forbid_data_javascript_urls
   - api.HTMLBaseElement.href.forbid_special_characters
   - api.HTMLButtonElement.command
-  - api.HTMLButtonElement.commandfor
+  - api.HTMLButtonElement.commandForElement
   - api.HTMLCanvasElement.getContext.2d_context
   - api.HTMLCanvasElement.getContext.bitmaprenderer_context
   - api.HTMLCanvasElement.getContext.bitmaprenderer_context.options_alpha_parameter
