--- a/features/draft/spec/webrtc-stats.yml.dist
+++ b/features/draft/spec/webrtc-stats.yml.dist
@@ -339,8 +339,9 @@ compat_features:
   #   safari_ios: "15.4"
   - api.RTCStatsReport.type_inbound-rtp.packetsDiscarded
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-03
+  # baseline_high_date: 2024-11-03
   # support:
   #   chrome: "80"
   #   chrome_android: "80"
