--- a/features/draft/spec/audio-output.yml.dist
+++ b/features/draft/spec/audio-output.yml.dist
@@ -3,7 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    firefox: "116"
 compat_features:
   # baseline: false
   # support:
@@ -13,13 +14,9 @@ compat_features:
   - api.HTMLMediaElement.setSinkId
   - api.HTMLMediaElement.sinkId
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   firefox: "116"
   - api.MediaDevices.selectAudioOutput
   - html.elements.iframe.allow.speaker-selection
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support: {}
-  - http.headers.Permissions-Policy.speaker-selection
