--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -3865,7 +3865,7 @@ compat_features:
   # baseline: false
   # support: {}
   - api.HTMLButtonElement.command
-  - api.HTMLButtonElement.commandfor
+  - api.HTMLButtonElement.commandForElement
   - api.HTMLElement.command_event
   - api.Navigator.authentication
   - html.elements.hr.hr_in_select
