--- a/features/draft/spec/streams.yml.dist
+++ b/features/draft/spec/streams.yml.dist
@@ -41,8 +41,9 @@ compat_features:
   - api.ReadableStreamDefaultController.enqueue
   - api.ReadableStreamDefaultController.error
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-03
+  # baseline_high_date: 2024-11-03
   # support:
   #   chrome: "78"
   #   chrome_android: "78"
@@ -53,8 +54,9 @@ compat_features:
   #   safari_ios: "14.5"
   - api.WritableStreamDefaultWriter.WritableStreamDefaultWriter
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-03
+  # baseline_high_date: 2024-11-03
   # support:
   #   chrome: "81"
   #   chrome_android: "81"
