--- a/features/streams.yml.dist
+++ b/features/streams.yml.dist
@@ -75,8 +75,9 @@ compat_features:
   - api.ReadableStream.ReadableStream
   - api.ReadableStream.tee
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-03
+  # baseline_high_date: 2024-11-03
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
@@ -101,8 +102,9 @@ compat_features:
   - api.WritableStreamDefaultWriter.releaseLock
   - api.WritableStreamDefaultWriter.write
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-03
+  # baseline_high_date: 2024-11-03
   # support:
   #   chrome: "59"
   #   chrome_android: "59"
