Addressed review comments

--- a/features/manifest.yml.dist
+++ b/features/manifest.yml.dist
@@ -4,9 +4,10 @@
 status:
   baseline: false
   support:
-    chrome: "96"
-    chrome_android: "96"
-    edge: "96"
+    chrome: "53"
+    chrome_android: "53"
+    edge: "79"
+    firefox_android: "79"
 compat_features:
   # baseline: false
   # support:
