--- a/features/uint8array-base64-hex.yml
+++ b/features/uint8array-base64-hex.yml
@@ -1,5 +1,5 @@
 name: Uint8Array base64 and hex conversion
-description: The `Uint8Array` class provides the `Uint8Array.fromBase64()`, `toBase64()`, and `setFromBase64()` methods for conversion to/from base64 strings, as well as the `Uint8Array.fromHex()`, `toHex()`, and `setFromHex()` methods for conversion to/from hex strings.
+description: The `Uint8Array` object methods `fromBase64()`, `toBase64()`, and `setFromBase64()` convert to and from base64 strings. The `fromHex()`, `toHex()`, and `setFromHex()` methods convert to and from hex strings.
 spec: https://tc39.es/proposal-arraybuffer-base64/spec/
 group:
   - typed-arrays
