Updates transition features with additional keys (#2107)

--- a/features/transition-behavior.yml.dist
+++ b/features/transition-behavior.yml.dist
@@ -14,3 +14,4 @@ status:
     safari_ios: "17.4"
 compat_features:
   - css.properties.transition-behavior
+  - css.properties.transition.transition-behavior
