--- a/features/transitions.yml
+++ b/features/transitions.yml
@@ -22,5 +22,8 @@ compat_features:
   - css.properties.transition-duration
   - css.properties.transition-property
   - css.properties.transition-property.all
+  - css.properties.transition-property.IDENT_value
   - css.properties.transition-property.none
   - css.properties.transition-timing-function
+  - css.properties.transition-timing-function.jump
+  - css.properties.transition.gradients_can_animate
