--- a/features/css-typed-om.yml
+++ b/features/css-typed-om.yml
@@ -1,6 +1,7 @@
 name: CSS typed object model
 description: The CSS typed object model allows web developers to programmatically interact with CSS values.
 spec: https://drafts.css-houdini.org/css-typed-om-1/
+group: cssom
 status:
   compute_from: api.Element.computedStyleMap
 compat_features:
