--- a/features/css-typed-om.yml
+++ b/features/css-typed-om.yml
@@ -1,5 +1,5 @@
 name: CSS typed object model
-description: The CSS typed object model allows web developers to programmatically interact with CSS values.
+description: The `CSSStyleValue` and its subclasses represent CSS values as distinct types instead of only strings. Also known as typed OM.
 spec: https://drafts.css-houdini.org/css-typed-om-1/
 group: cssom
 status:
