--- a/features/virtual-keyboard.yml
+++ b/features/virtual-keyboard.yml
@@ -1,5 +1,5 @@
 name: Virtual keyboard
-description: The `navigator.virtualKeyboard` property and the `VirtualKeyboard` interface handle on-screen virtual keyboards, for example to programmatically hide or show a virtual keyboard.
+description: The `navigator.virtualKeyboard` API inspects and controls on-screen virtual keyboards. You can use it to programmatically hide or show a virtual keyboard or respond to the keyboard disappearing or appearing.
 spec: https://w3c.github.io/virtual-keyboard/
 compat_features:
   - api.HTMLElement.virtualKeyboardPolicy
