--- a/features/web-share.yml
+++ b/features/web-share.yml
@@ -1,5 +1,5 @@
-name: Web Share
-description: The `navigator.share()` method invokes the native sharing mechanism of the underlying operating system and passes text, links, files, and other content to share targets.
+name: navigator.share()
+description: The `navigator.share()` method invokes the device's native sharing mechanism and passes text, links, files, and other content to share targets.
 spec: https://w3c.github.io/web-share/
 status:
   compute_from: api.Navigator.share
