Add virtual keyboard (#2160)
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/virtual-keyboard.yml
+++ b/features/virtual-keyboard.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-09-09
-name: VirtualKeyboard API
-description: TODO
+name: Virtual keyboard
+description: The `navigator.virtualKeyboard` API inspects and controls on-screen virtual keyboards. You can use it to programmatically hide or show a virtual keyboard or respond to the keyboard disappearing or appearing.
 spec: https://w3c.github.io/virtual-keyboard/
 compat_features:
   - api.HTMLElement.virtualKeyboardPolicy
