Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/serial.yml
+++ b/features/serial.yml
@@ -1,5 +1,5 @@
-name: Web Serial
-description: The `navigator.serial` property and the `Serial` and `SerialPort` interfaces communicate with devices over serial ports.
+name: Web serial
+description: The `navigator.serial` API communicates with devices over serial ports, such as microcontrollers.
 spec: https://wicg.github.io/serial/
 status:
   compute_from: api.Navigator.serial
