--- a/features/share.yml
+++ b/features/share.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-28
-name: Web Share API
-description: TODO
+name: navigator.share()
+description: The `navigator.share()` method invokes the device's native sharing mechanism and passes text, links, files, and other content to share targets.
 spec: https://w3c.github.io/web-share/
+status:
+  compute_from: api.Navigator.share
 compat_features:
   - api.Navigator.canShare
   - api.Navigator.canShare.data_files_parameter
