Add Network Information (#2162)
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/network-information.yml
+++ b/features/network-information.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-10-21
-name: Network Information API
-description: TODO
+name: Network Information
+description: The `navigator.connection` API provides information about the network connection a device is using and fires events when the connection type changes.
 spec: https://wicg.github.io/netinfo/
 compat_features:
   - api.Navigator.connection
