--- a/features/text-box.yml
+++ b/features/text-box.yml
@@ -1,5 +1,5 @@
 name: text-box
-description: "The `text-box` CSS property sets the spacing above and below text which is normally reserved for ascenders and descenders, based on a font's typographic features. For example, `text-box: trim-both ex alphabetic` trims the top to the top of the letter x and the bottom to the bottom of most letters, without descenders."
+description: "The `text-box` CSS property sets the spacing above and below text based on a font's typographic features. For example, `text-box: trim-both ex alphabetic` trims the top to the top of the letter x and the bottom to the bottom of most letters, without descenders."
 spec: https://drafts.csswg.org/css-inline-3/#leading-trim
 group: text
 caniuse: css-text-box-trim
