--- a/features/supports-compat.yml
+++ b/features/supports-compat.yml
@@ -1,5 +1,5 @@
 name: "@supports (compatibility prefix)"
-description: The `-webkit-transform-3d` CSS media query is a standardized compatibility alternative to `@supports (transform-style)`.
+description: The `@supports (-webkit-transform-3d)` CSS media query is a standardized compatibility alternative to `@supports (transform-style)`.
 spec: https://compat.spec.whatwg.org/#css-media-queries-webkit-transform-3d
 group: media-queries
 compat_features:
