--- a/features/resolution.yml
+++ b/features/resolution.yml
@@ -2,7 +2,7 @@ name: resolution media query
 description: The `resolution` CSS media query sets styles based on the pixel density, or how many pixels a device uses to display a single CSS pixel.
 spec: https://drafts.csswg.org/mediaqueries-5/#resolution
 caniuse: css-media-resolution
-# group: media-queries
+group: media-queries
 compat_features:
   - css.at-rules.media.resolution
   - css.types.resolution
