--- a/features/focus-within.yml
+++ b/features/focus-within.yml
@@ -1,6 +1,7 @@
-name: ""
-description: ""
+name: ":focus-within"
+description: "The `:focus-within` CSS pseudo-class matches an element if the element or any of its children have `:focus`."
 spec: https://drafts.csswg.org/selectors-4/#the-focus-within-pseudo
-caniuse: ""
+caniuse: css-focus-within
+group: selectors
 compat_features:
   - css.selectors.focus-within
