--- a/features/form-validity-pseudos.yml.dist
+++ b/features/form-validity-pseudos.yml.dist
@@ -3,17 +3,18 @@
 
 status:
   baseline: high
-  baseline_low_date: 2020-01-15
-  baseline_high_date: 2022-07-15
+  baseline_low_date: 2015-07-29
+  baseline_high_date: 2018-01-29
   support:
-    chrome: "40"
-    chrome_android: "40"
-    edge: "79"
-    firefox: "29"
-    firefox_android: "16"
-    safari: "9"
-    safari_ios: "9"
+    chrome: "10"
+    chrome_android: "18"
+    edge: "12"
+    firefox: "4"
+    firefox_android: "4"
+    safari: "5"
+    safari_ios: "5"
 compat_features:
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: high
   # baseline_low_date: 2015-07-29
   # baseline_high_date: 2018-01-29
