--- a/features/scope-pseudo.yml
+++ b/features/scope-pseudo.yml
@@ -1,7 +1,7 @@
-name: ""
-description: ""
+name: Scope pseudo
+description: "The `:scope` CSS pseudo-class represents elements that are a reference point for selectors to match against."
 spec: https://drafts.csswg.org/selectors-4/#the-scope-pseudo
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.scope
   - css.selectors.scope.dom_api
