add names, descriptions, groups

--- a/features/case-sensitive-attributes.yml
+++ b/features/case-sensitive-attributes.yml
@@ -1,6 +1,6 @@
-name: ""
-description: ""
+name: Case-sensitive attribute selector
+description: The case-sensitive CSS attribute selectors match elements with case-sensitive values like `class`, `id`, and `data-*` attributes. An `s` before the closing bracket makes the value case sensitive.
 spec: https://drafts.csswg.org/selectors-4/#attribute-case
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.attribute.case_sensitive_modifier
