--- a/features/time-relative-selectors.yml
+++ b/features/time-relative-selectors.yml
@@ -1,7 +1,7 @@
-name: ""
-description: ""
+name: Time-dimensional pseudo-selectors
+description: The `:future` and `:past` CSS pseudo-selectors style upcoming or prior elements during media playback.
 spec: https://drafts.csswg.org/selectors-4/#time-pseudos
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.future
   - css.selectors.past
