--- a/features/case-insensitive-attributes.yml
+++ b/features/case-insensitive-attributes.yml
@@ -1,6 +1,7 @@
-name: ""
-description: ""
+name: Case-insensitive attribute selector
+description: The case-insensitive CSS attribute selectors match values with an `i` before the closing bracket.
 spec: https://drafts.csswg.org/selectors-4/#attribute-case
-caniuse: ""
+caniuse: css-case-insensitive
+group: selectors
 compat_features:
   - css.selectors.attribute.case_insensitive_modifier
