--- a/features/lang-list-wildcard.yml
+++ b/features/lang-list-wildcard.yml
@@ -1,7 +1,7 @@
-name: ""
-description: ""
+name: Lang list wildcard
+description: "[TODO] The `:lang()` CSS pseudo class selector matches elements based on the context of their given language attribute."
 spec: https://drafts.csswg.org/selectors-4/#the-lang-pseudo
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.lang.argument_list
   - css.selectors.lang.wildcards
