--- a/features/open-closed.yml
+++ b/features/open-closed.yml
@@ -1,7 +1,7 @@
-name: ""
-description: ""
+name: Open and closed selectors
+description: "The `:open` and `:closed` CSS selectors [TODO]"
 spec: ""
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.closed
   - css.selectors.open
