--- a/features/target-within.yml
+++ b/features/target-within.yml
@@ -1,6 +1,6 @@
-name: ""
-description: ""
+name: :target-within
+description: "The `:target-within` CSS pseudo-class represents the target element with an id matching the URL fragment."
 spec: https://drafts.csswg.org/selectors-4/#the-target-within-pseudo
-caniuse: ""
+group: selectors
 compat_features:
   - css.selectors.target-within
