--- a/features/form-validity-pseudos.yml
+++ b/features/form-validity-pseudos.yml
@@ -1,5 +1,5 @@
 name: Form validity pseudos
-description: "The form validity CSS pseudo-classes match <form> elements that are `:valid` or `:invalid`, `:optional` or `:required`, in or out of acceptable range."
+description: "The form validity CSS pseudo-classes match <form> elements that are `:valid` or `:invalid`, `:optional` or `:required`, or in or out of an acceptable range."
 spec: https://drafts.csswg.org/selectors-4/#ui-validity
 caniuse:
   - css-optional-pseudo
