--- a/features/link-selectors.yml
+++ b/features/link-selectors.yml
@@ -1,5 +1,5 @@
 name: Link selectors
-description: The `:link` CSS pseudo-class matches unvistied links, `:visited` matches visited links, and `:any-link` matches both.
+description: The `:link` CSS pseudo-class matches unvisited links, `:visited` matches visited links, and `:any-link` matches both.
 spec: https://drafts.csswg.org/selectors-4/#location
 caniuse: css-any-link
 group: selectors
