--- a/features/focus-within.yml
+++ b/features/focus-within.yml
@@ -1,5 +1,5 @@
 name: ":focus-within"
-description: "The `:focus-within` CSS pseudo-class matches an element if the element or any of its children have `:focus`."
+description: "The `:focus-within` CSS pseudo-class matches an element if the element or any of its children are focused."
 spec: https://drafts.csswg.org/selectors-4/#the-focus-within-pseudo
 caniuse: css-focus-within
 group: selectors
