--- a/features/webauthn.yml
+++ b/features/webauthn.yml
@@ -15,6 +15,11 @@ compat_features:
   - api.AuthenticatorResponse
   - api.AuthenticatorResponse.clientDataJSON
   - api.CredentialsContainer.create.publicKey_option
+  - api.CredentialsContainer.create.publicKey_option.attestation
+  - api.CredentialsContainer.create.publicKey_option.attestation.direct
+  - api.CredentialsContainer.create.publicKey_option.attestation.enterprise
+  - api.CredentialsContainer.create.publicKey_option.attestation.indirect
+  - api.CredentialsContainer.create.publicKey_option.attestation.none
   - api.CredentialsContainer.create.publicKey_option.extensions
   - api.CredentialsContainer.create.publicKey_option.extensions.appidExclude
   - api.CredentialsContainer.create.publicKey_option.extensions.credProps
