--- a/features/webauthn.yml.dist
+++ b/features/webauthn.yml.dist
@@ -26,6 +26,9 @@ compat_features:
   #   safari: "13"
   #   safari_ios: "13"
   - api.CredentialsContainer.create.publicKey_option
+  - api.CredentialsContainer.create.publicKey_option.attestation
+  - api.CredentialsContainer.create.publicKey_option.attestation.indirect
+  - api.CredentialsContainer.create.publicKey_option.attestation.none
   - api.CredentialsContainer.create.publicKey_option.extensions
   - api.CredentialsContainer.create.publicKey_option.extensions.appidExclude
   - api.CredentialsContainer.get.publicKey_option
@@ -93,6 +96,17 @@ compat_features:
   #   safari: "15.5"
   #   safari_ios: "15.5"
   - api.PublicKeyCredential.authenticatorAttachment
+
+  # baseline: false
+  # support:
+  #   chrome: "67"
+  #   chrome_android: "70"
+  #   edge: "18"
+  #   firefox: "60"
+  #   safari: "13"
+  #   safari_ios: "13"
+  - api.CredentialsContainer.create.publicKey_option.attestation.direct
+  - api.CredentialsContainer.create.publicKey_option.attestation.enterprise
 
   # baseline: false
   # support:
