--- a/features/dom.yml
+++ b/features/dom.yml
@@ -28,6 +28,10 @@ compat_features:
   - api.CharacterData.substringData
   - api.Comment
   - api.Comment.Comment
+  - api.DOMException
+  - api.DOMException.DOMException
+  - api.DOMException.message
+  - api.DOMException.name
   - api.DOMImplementation
   - api.DOMImplementation.createDocument
   - api.DOMImplementation.createDocumentType
@@ -59,8 +63,8 @@ compat_features:
   - api.DOMTokenList.value
   - api.DOMTokenList.values
   - api.Document
-  - api.Document.Document
   - api.Document.DOMContentLoaded_event
+  - api.Document.Document
   - api.Document.URL
   - api.Document.activeElement
   - api.Document.adoptNode
@@ -93,9 +97,9 @@ compat_features:
   - api.Document.embeds
   - api.Document.firstElementChild
   - api.Document.forms
-  - api.Document.getElementsByName
   - api.Document.getElementById
   - api.Document.getElementsByClassName
+  - api.Document.getElementsByName
   - api.Document.getElementsByTagName
   - api.Document.getElementsByTagNameNS
   - api.Document.hasFocus
@@ -144,7 +148,6 @@ compat_features:
   - api.Element.after
   - api.Element.append
   - api.Element.attributes
-  - api.Element.outerHTML
   - api.Element.before
   - api.Element.childElementCount
   - api.Element.children
@@ -175,6 +178,7 @@ compat_features:
   - api.Element.matches
   - api.Element.namespaceURI
   - api.Element.nextElementSibling
+  - api.Element.outerHTML
   - api.Element.prefix
   - api.Element.prepend
   - api.Element.previousElementSibling
