Add a key to Web Animations

--- a/features/web-animations.yml
+++ b/features/web-animations.yml
@@ -46,6 +46,7 @@ compat_features:
   - api.Animation.timeline
   - api.AnimationTimeline
   - api.AnimationTimeline.currentTime
+  - api.AnimationTimeline.duration
   - api.Document.timeline
   - api.DocumentTimeline
   - api.DocumentTimeline.DocumentTimeline
