--- a/features/web-animations.yml.dist
+++ b/features/web-animations.yml.dist
@@ -240,6 +240,7 @@ compat_features:
   #   chrome: "115"
   #   chrome_android: "115"
   #   edge: "115"
+  - api.AnimationTimeline.duration
   - api.Element.animate.options_rangeEnd_parameter
   - api.Element.animate.options_rangeStart_parameter
 
