Add more keys to ARIA attribute reflection

--- a/features/aria-attribute-reflection.yml
+++ b/features/aria-attribute-reflection.yml
@@ -1,3 +1,111 @@
 name: ARIA attribute reflection
 description: WAI-ARIA attributes have corresponding properties on `Element` and `ElementInternals` objects.
 spec: https://w3c.github.io/aria/#accessibilityroleandproperties-correspondence
+status:
+  compute_from:
+    - api.Element.role
+    - api.ElementInternals.role
+compat_features:
+  - api.Element.ariaActiveDescendantElement
+  - api.Element.ariaAtomic
+  - api.Element.ariaAutoComplete
+  - api.Element.ariaBrailleLabel
+  - api.Element.ariaBrailleRoleDescription
+  - api.Element.ariaBusy
+  - api.Element.ariaChecked
+  - api.Element.ariaColCount
+  - api.Element.ariaColIndex
+  - api.Element.ariaColIndexText
+  - api.Element.ariaColSpan
+  - api.Element.ariaControlsElements
+  - api.Element.ariaCurrent
+  - api.Element.ariaDescribedByElements
+  - api.Element.ariaDescription
+  - api.Element.ariaDetailsElements
+  - api.Element.ariaDisabled
+  - api.Element.ariaErrorMessageElements
+  - api.Element.ariaExpanded
+  - api.Element.ariaFlowToElements
+  - api.Element.ariaHasPopup
+  - api.Element.ariaHidden
+  - api.Element.ariaInvalid
+  - api.Element.ariaKeyShortcuts
+  - api.Element.ariaLabel
+  - api.Element.ariaLabelledByElements
+  - api.Element.ariaLevel
+  - api.Element.ariaLive
+  - api.Element.ariaModal
+  - api.Element.ariaMultiLine
+  - api.Element.ariaMultiSelectable
+  - api.Element.ariaOrientation
+  - api.Element.ariaOwnsElements
+  - api.Element.ariaPlaceholder
+  - api.Element.ariaPosInSet
+  - api.Element.ariaPressed
+  - api.Element.ariaReadOnly
+  - api.Element.ariaRelevant
+  - api.Element.ariaRequired
+  - api.Element.ariaRoleDescription
+  - api.Element.ariaRowCount
+  - api.Element.ariaRowIndex
+  - api.Element.ariaRowIndexText
+  - api.Element.ariaRowSpan
+  - api.Element.ariaSelected
+  - api.Element.ariaSetSize
+  - api.Element.ariaSort
+  - api.Element.ariaValueMax
+  - api.Element.ariaValueMin
+  - api.Element.ariaValueNow
+  - api.Element.ariaValueText
+  - api.Element.role
+  - api.ElementInternals.ariaActiveDescendantElement
+  - api.ElementInternals.ariaAtomic
+  - api.ElementInternals.ariaAutoComplete
+  - api.ElementInternals.ariaBrailleLabel
+  - api.ElementInternals.ariaBrailleRoleDescription
+  - api.ElementInternals.ariaBusy
+  - api.ElementInternals.ariaChecked
+  - api.ElementInternals.ariaColCount
+  - api.ElementInternals.ariaColIndex
+  - api.ElementInternals.ariaColIndexText
+  - api.ElementInternals.ariaColSpan
+  - api.ElementInternals.ariaControlsElements
+  - api.ElementInternals.ariaCurrent
+  - api.ElementInternals.ariaDescribedByElements
+  - api.ElementInternals.ariaDescription
+  - api.ElementInternals.ariaDetailsElements
+  - api.ElementInternals.ariaDisabled
+  - api.ElementInternals.ariaErrorMessageElements
+  - api.ElementInternals.ariaExpanded
+  - api.ElementInternals.ariaFlowToElements
+  - api.ElementInternals.ariaHasPopup
+  - api.ElementInternals.ariaHidden
+  - api.ElementInternals.ariaInvalid
+  - api.ElementInternals.ariaKeyShortcuts
+  - api.ElementInternals.ariaLabel
+  - api.ElementInternals.ariaLabelledByElements
+  - api.ElementInternals.ariaLevel
+  - api.ElementInternals.ariaLive
+  - api.ElementInternals.ariaModal
+  - api.ElementInternals.ariaMultiLine
+  - api.ElementInternals.ariaMultiSelectable
+  - api.ElementInternals.ariaOrientation
+  - api.ElementInternals.ariaOwnsElements
+  - api.ElementInternals.ariaPlaceholder
+  - api.ElementInternals.ariaPosInSet
+  - api.ElementInternals.ariaPressed
+  - api.ElementInternals.ariaReadOnly
+  - api.ElementInternals.ariaRequired
+  - api.ElementInternals.ariaRoleDescription
+  - api.ElementInternals.ariaRowCount
+  - api.ElementInternals.ariaRowIndex
+  - api.ElementInternals.ariaRowIndexText
+  - api.ElementInternals.ariaRowSpan
+  - api.ElementInternals.ariaSelected
+  - api.ElementInternals.ariaSetSize
+  - api.ElementInternals.ariaSort
+  - api.ElementInternals.ariaValueMax
+  - api.ElementInternals.ariaValueMin
+  - api.ElementInternals.ariaValueNow
+  - api.ElementInternals.ariaValueText
+  - api.ElementInternals.role
