--- a/features/aria-attribute-reflection.yml.dist
+++ b/features/aria-attribute-reflection.yml.dist
@@ -10,8 +10,8 @@ status:
     edge: "103"
     firefox: "119"
     firefox_android: "119"
-    safari: "12.1"
-    safari_ios: "12.2"
+    safari: "16.4"
+    safari_ios: "16.4"
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-10-24
@@ -63,6 +63,52 @@ compat_features:
   # baseline: low
   # baseline_low_date: 2023-10-24
   # support:
+  #   chrome: "81"
+  #   chrome_android: "81"
+  #   edge: "81"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.ElementInternals.ariaAtomic
+  - api.ElementInternals.ariaAutoComplete
+  - api.ElementInternals.ariaBusy
+  - api.ElementInternals.ariaChecked
+  - api.ElementInternals.ariaColCount
+  - api.ElementInternals.ariaColIndex
+  - api.ElementInternals.ariaColSpan
+  - api.ElementInternals.ariaCurrent
+  - api.ElementInternals.ariaDisabled
+  - api.ElementInternals.ariaExpanded
+  - api.ElementInternals.ariaHasPopup
+  - api.ElementInternals.ariaHidden
+  - api.ElementInternals.ariaKeyShortcuts
+  - api.ElementInternals.ariaLabel
+  - api.ElementInternals.ariaLevel
+  - api.ElementInternals.ariaLive
+  - api.ElementInternals.ariaModal
+  - api.ElementInternals.ariaMultiLine
+  - api.ElementInternals.ariaMultiSelectable
+  - api.ElementInternals.ariaOrientation
+  - api.ElementInternals.ariaPlaceholder
+  - api.ElementInternals.ariaPosInSet
+  - api.ElementInternals.ariaPressed
+  - api.ElementInternals.ariaReadOnly
+  - api.ElementInternals.ariaRequired
+  - api.ElementInternals.ariaRoleDescription
+  - api.ElementInternals.ariaRowCount
+  - api.ElementInternals.ariaRowIndex
+  - api.ElementInternals.ariaRowSpan
+  - api.ElementInternals.ariaSelected
+  - api.ElementInternals.ariaSort
+  - api.ElementInternals.ariaValueMax
+  - api.ElementInternals.ariaValueMin
+  - api.ElementInternals.ariaValueNow
+  - api.ElementInternals.ariaValueText
+
+  # baseline: low
+  # baseline_low_date: 2023-10-24
+  # support:
   #   chrome: "84"
   #   chrome_android: "84"
   #   edge: "84"
@@ -71,6 +117,18 @@ compat_features:
   #   safari: "12.1"
   #   safari_ios: "12.2"
   - api.Element.ariaSetSize
+
+  # baseline: low
+  # baseline_low_date: 2023-10-24
+  # support:
+  #   chrome: "84"
+  #   chrome_android: "84"
+  #   edge: "84"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.ElementInternals.ariaSetSize
 
   # baseline: low
   # baseline_low_date: 2023-10-24
@@ -84,7 +142,18 @@ compat_features:
   #   safari_ios: "12.2"
   - api.Element.ariaInvalid
 
-  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-10-24
+  # support:
+  #   chrome: "102"
+  #   chrome_android: "102"
+  #   edge: "102"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.ElementInternals.ariaInvalid
+
   # baseline: low
   # baseline_low_date: 2023-10-24
   # support:
@@ -96,3 +165,85 @@ compat_features:
   #   safari: "12.1"
   #   safari_ios: "12.2"
   - api.Element.role
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: low
+  # baseline_low_date: 2023-10-24
+  # support:
+  #   chrome: "103"
+  #   chrome_android: "103"
+  #   edge: "103"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.ElementInternals.role
+
+  # baseline: low
+  # baseline_low_date: 2024-03-05
+  # support:
+  #   chrome: "83"
+  #   chrome_android: "83"
+  #   edge: "83"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "17.4"
+  #   safari_ios: "17.4"
+  - api.Element.ariaDescription
+
+  # baseline: low
+  # baseline_low_date: 2024-09-16
+  # support:
+  #   chrome: "107"
+  #   chrome_android: "107"
+  #   edge: "107"
+  #   firefox: "125"
+  #   firefox_android: "125"
+  #   safari: "18"
+  #   safari_ios: "18"
+  - api.Element.ariaBrailleLabel
+  - api.Element.ariaBrailleRoleDescription
+  - api.ElementInternals.ariaBrailleLabel
+  - api.ElementInternals.ariaBrailleRoleDescription
+
+  # baseline: false
+  # support:
+  #   chrome: "83"
+  #   chrome_android: "83"
+  #   edge: "83"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  - api.ElementInternals.ariaDescription
+
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  - api.Element.ariaColIndexText
+  - api.Element.ariaRowIndexText
+  - api.ElementInternals.ariaColIndexText
+  - api.ElementInternals.ariaRowIndexText
+
+  # baseline: false
+  # support:
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.Element.ariaActiveDescendantElement
+  - api.Element.ariaControlsElements
+  - api.Element.ariaDescribedByElements
+  - api.Element.ariaDetailsElements
+  - api.Element.ariaErrorMessageElements
+  - api.Element.ariaFlowToElements
+  - api.Element.ariaLabelledByElements
+  - api.Element.ariaOwnsElements
+  - api.ElementInternals.ariaActiveDescendantElement
+  - api.ElementInternals.ariaControlsElements
+  - api.ElementInternals.ariaDescribedByElements
+  - api.ElementInternals.ariaDetailsElements
+  - api.ElementInternals.ariaErrorMessageElements
+  - api.ElementInternals.ariaFlowToElements
+  - api.ElementInternals.ariaLabelledByElements
+  - api.ElementInternals.ariaOwnsElements
