Add user agent client hints

--- a/features/ua-client-hints.yml
+++ b/features/ua-client-hints.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-10-21
-name: User-Agent Client Hints
-description: TODO
+name: User agent client hints
+description: User agent (UA) client hint headers allow a server to vary responses based on the user agent (browser), operating system, and device.
 spec: https://wicg.github.io/ua-client-hints/
 compat_features:
   - api.Navigator.userAgentData
