--- a/features/speculation-rules.yml
+++ b/features/speculation-rules.yml
@@ -1,8 +1,12 @@
-draft_date: 2024-10-21
-name: Speculation Rules
-description: TODO
-spec: https://wicg.github.io/nav-speculation/speculation-rules.html
+name: Speculation rules
+description: Speculation rules are hints to the browser which pages to proactively download in the background so it can be instantly displayed to the user when they navigate to it.
+spec:
+  - https://wicg.github.io/nav-speculation/speculation-rules.html
+  - https://wicg.github.io/nav-speculation/prerendering.html
 compat_features:
+  - api.Document.prerendering
+  - api.Document.prerenderingchange_event
+  - api.PerformanceNavigationTiming.activationStart
   - html.elements.script.type.speculationrules
   - html.elements.script.type.speculationrules.eagerness
   - html.elements.script.type.speculationrules.expects_no_vary_search
@@ -17,3 +21,6 @@ compat_features:
   - html.elements.script.type.speculationrules.where
   - http.headers.Content-Security-Policy.script-src.inline-speculation-rules
   - http.headers.Speculation-Rules
+  - http.headers.Supports-Loading-Mode
+  - http.headers.Supports-Loading-Mode.credentialed-prerender
+  - http.headers.Supports-Loading-Mode.fenced-frames
