--- a/features/savedata.yml
+++ b/features/savedata.yml
@@ -1,5 +1,5 @@
 name: Save-Data
-description: When a client enables a data-saving mode, the browser sends a `Save-Data` request header which should be used as a signal to reduce data sent to the client. If enabled, websites are encouraged to deliver alternative content, such as smaller image and video resources, or different markup and styling.
+description: Browsers send the `Save-Data` HTTP request header when the user turns on a data-saving mode. It is a hint to reduce data sent to the browser. Servers should respond with alternative content, such as smaller images and videos, or different markup and styling.
 spec: https://wicg.github.io/savedata/
 compat_features:
   - api.NetworkInformation.saveData
