--- a/features/flexbox.yml.dist
+++ b/features/flexbox.yml.dist
@@ -96,6 +96,7 @@ compat_features:
   #   safari_ios: "9"
   - css.properties.align-items.flex_context
   - css.properties.justify-content.flex_context
+  - css.properties.justify-items
   - css.properties.justify-items.flex_context
 
   # baseline: high
