--- a/features/flexbox.yml
+++ b/features/flexbox.yml
@@ -59,6 +59,7 @@ compat_features:
   - css.properties.justify-content.flex_context.space-evenly
   - css.properties.justify-content.flex_context.start_end
   - css.properties.justify-content.flex_context.stretch
+  - css.properties.justify-items
   - css.properties.justify-items.flex_context
   - css.properties.order
   - css.properties.place-content.flex_context
