--- a/features/multi-column.yml
+++ b/features/multi-column.yml
@@ -19,3 +19,4 @@ compat_features:
   - css.properties.column-rule-color
   - css.properties.column-rule-style
   - css.properties.column-rule-width
+  - css.properties.gap.multicol_context
