--- a/features/grid.yml.dist
+++ b/features/grid.yml.dist
@@ -31,6 +31,19 @@ compat_features:
   # baseline_low_date: 2017-10-17
   # baseline_high_date: 2020-04-17
   # support:
+  #   chrome: "47"
+  #   chrome_android: "47"
+  #   edge: "16"
+  #   firefox: "52"
+  #   firefox_android: "52"
+  #   safari: "10.1"
+  #   safari_ios: "10.3"
+  - css.properties.row-gap
+
+  # baseline: high
+  # baseline_low_date: 2017-10-17
+  # baseline_high_date: 2020-04-17
+  # support:
   #   chrome: "57"
   #   chrome_android: "52"
   #   edge: "16"
@@ -55,6 +68,7 @@ compat_features:
   #   safari: "10.1"
   #   safari_ios: "10.3"
   - css.properties.justify-items.grid_context
+  - css.properties.justify-self
   - css.properties.justify-self.grid_context
 
   # ⬇️ Same status as overall feature ⬇️
@@ -71,6 +85,7 @@ compat_features:
   #   safari_ios: "10.3"
   - css.properties.display.grid
   - css.properties.display.inline-grid
+  - css.properties.gap
   - css.properties.grid
   - css.properties.grid-area
   - css.properties.grid-auto-flow
