--- a/features/sourcemaps.yml
+++ b/features/sourcemaps.yml
@@ -1,5 +1,5 @@
 name: Source Maps
-description: The `SourceMap` HTTP response header links generated code to a source map, enabling the browser to reconstruct the original source and present the reconstructed original in the debugger.
+description: The `SourceMap` HTTP response header links generated code to a source map, so the browser shows the original source in a debugger. This makes it easier to work with minified or transpiled code.
 spec: https://tc39.es/source-map/
 compat_features:
   - http.headers.SourceMap
