--- a/features/sourcemaps.yml
+++ b/features/sourcemaps.yml
@@ -1,4 +1,4 @@
-name: Source Maps
+name: Source maps
 description: The `SourceMap` HTTP response header links generated code to a source map, so the browser shows the original source in a debugger. This makes it easier to work with minified or transpiled code.
 spec: https://tc39.es/source-map/
 compat_features:
