--- a/features/align-content-block.yml
+++ b/features/align-content-block.yml
@@ -1,6 +1,6 @@
 name: align-content in block layouts
 description: The `align-content` property vertically aligns content in block layouts, and no longer requires a flex or grid layout.
-spec: https://drafts.csswg.org/css-align/#align-justify-content
+spec: https://drafts.csswg.org/css-align-3/#align-justify-content
 group: layout
 compat_features:
   - css.properties.align-content.block_context
