--- a/features/page-setup.yml
+++ b/features/page-setup.yml
@@ -9,6 +9,22 @@ status:
   compute_from: css.at-rules.page.size
 compat_features:
   - css.at-rules.page
+  - css.at-rules.page.bottom-center
+  - css.at-rules.page.bottom-left
+  - css.at-rules.page.bottom-left-corner
+  - css.at-rules.page.bottom-right
+  - css.at-rules.page.bottom-right-corner
+  - css.at-rules.page.left-bottom
+  - css.at-rules.page.left-middle
+  - css.at-rules.page.left-top
+  - css.at-rules.page.right-bottom
+  - css.at-rules.page.right-middle
+  - css.at-rules.page.right-top
   - css.at-rules.page.size
   - css.at-rules.page.size.jis-b4
   - css.at-rules.page.size.jis-b5
+  - css.at-rules.page.top-center
+  - css.at-rules.page.top-left
+  - css.at-rules.page.top-left-corner
+  - css.at-rules.page.top-right
+  - css.at-rules.page.top-right-corner
