--- a/features/fit-content.yml
+++ b/features/fit-content.yml
@@ -1,5 +1,5 @@
 name: fit-content
-description: The `fit-content` CSS keyword expands a box as needed to fit its contents until the maximum size is reached.
+description: The `fit-content` CSS keyword expands a box as needed to fit its contents until the maximum size is reached, preserving the content's preferred aspect ratio.
 spec: https://drafts.csswg.org/css-sizing-4/#valdef-width-fit-content
 group: layout
 compat_features:
